--- a/frontend/src/app/features/chat-room/components/chat/chat.component.html
+++ b/frontend/src/app/features/chat-room/components/chat/chat.component.html
@@ -2,7 +2,9 @@
     <div class="messages">
         <div *ngFor="let msg of messages">{{ msg }}</div>
     </div>
-
+    <div>
+        hi
+    </div>
     <form [formGroup]="chatForm" (ngSubmit)="sendMessage()">
         <input type="text" class="form-control" formControlName="message" placeholder="Type your message"
             (keyup.enter)="sendMessage()" />
