--- a/frontend/src/app/features/chat-room/components/chat/chat.component.html
+++ b/frontend/src/app/features/chat-room/components/chat/chat.component.html
@@ -1,13 +1,60 @@
-<div class="chat-container">
+<!-- <div class="chat-container">
+
     <div class="messages">
         <div *ngFor="let msg of messages">{{ msg }}</div>
     </div>
-    <div>
-        hi
-    </div>
+
     <form [formGroup]="chatForm" (ngSubmit)="sendMessage()">
         <input type="text" class="form-control" formControlName="message" placeholder="Type your message"
             (keyup.enter)="sendMessage()" />
         <button class="btn btn-primary" type="submit" [disabled]="chatForm.invalid">Send</button>
     </form>
+</div> -->
+
+
+<div class="container-fluid d-flex flex-column vh-100">
+    <nav class="navbar navbar-dark bg-dark px-3">
+        <span class="navbar-brand">Chat Application</span>
+        <button class="btn btn-outline-light btn-sm">Logout</button>
+    </nav>
+
+    <div class="row flex-grow-1 overflow-hidden">
+        <div class="col-md-3 border border-secondary rounded-start d-none d-md-block p-0 bg-light">
+            <div class="p-3 border-bottom">
+                <input type="text" class="form-control" placeholder="Search users..." />
+            </div>
+            <ul class="list-group list-group-flush overflow-auto h-100">
+                <li *ngFor="let user of users" (click)="selectUser(user)"
+                    class="list-group-item list-group-item-action">
+                    {{ user.first_name }}
+                </li>
+            </ul>
+        </div>
+
+
+        <!-- <div class="col-md-9 col-12 d-flex flex-column p-0">
+      <div class="d-flex align-items-center justify-content-between p-2 border-bottom bg-light">
+        <button class="btn btn-link d-md-none" (click)="backToUsers()">&larr;</button>
+        <h6 class="mb-0">{{ selectedUser?.name }}</h6>
+      </div>
+
+      <div class="flex-grow-1 overflow-auto p-3 bg-body-secondary">
+        <div *ngFor="let msg of messages" [ngClass]="{ 'text-end': msg.fromSelf, 'text-start': !msg.fromSelf }">
+          <div class="d-inline-block p-2 my-1 rounded bg-primary text-white" *ngIf="msg.fromSelf">
+            {{ msg.text }}
+          </div>
+          <div class="d-inline-block p-2 my-1 rounded bg-light border" *ngIf="!msg.fromSelf">
+            {{ msg.text }}
+          </div>
+        </div>
+      </div>
+
+      <div class="p-3 border-top bg-white">
+        <form class="d-flex" (submit)="sendMessage(); $event.preventDefault();">
+          <input type="text" [(ngModel)]="newMessage" name="message" class="form-control me-2" placeholder="Type a message...">
+          <button class="btn btn-primary" type="submit">Send</button>
+        </form>
+      </div>
+    </div> -->
+    </div>
 </div>
